# CONFIG

./: .flake8  Makefile  env_exemple  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflow/: my_project.yml
CONFIG/: settings.py  urls.py
apps/: router.py
